--- a/index.html
+++ b/index.html
@@ -146,5 +146,10 @@
         <li>Drawing</li>
         <li>Painting</li>
     </ul>
+    
+    <footer>
+        <p>© 2023 Daniel Querido</p>
+    </footer>
+
 </body>
 </html>
